updating crud operation and adding registration by team and by hackathon
